# FAUMouse

./: .gitmodules  README.md
MouseReg1/: readme.txt
MouseReg1/src/: ANALYSER.CC  ANALYSER.DSK  ANALYSER.PRJ  CLICS.DSK  CLICS.PRJ  NSF2OLD.CC  OSFDIST.CC
MouseReg2/: readme.txt
MouseReg2/DYSTR_1999/: Eksperyment.lnk  Mousereg.ini  output.out
MouseReg2/DYSTR_200304/: Shortcut to experiment.lnk  output.out  regconfig.ini
MouseReg2/DYSTR_2004-5_FINAL/: default.ini
MouseReg2/DYSTR_2004-5_FINAL/sample_data/: 100a.out  102A.out  108a.out  10p.out
MouseReg2/DYSTR_2004-5_FINAL/sample_experiment/: Shortcut to analyser2004.lnk  Shortcut to mousereg2004.lnk  regconfig.ini
MouseReg2/DYSTR_2008/: DEFAULT.lnk
MouseReg2/DYSTR_2008/sample_data/: 100a_c.out  103A.out  105A.out  106a.out  one file analisis.lnk
MouseReg2/DYSTR_2008/sample_experiment/: instruction.txt
MouseReg2/DYSTR_2013/Agata2013b32v3/: Dzieki.ini  Dzieki.rtf  Eksperyment.bat  Metryczka1_11.txt  Nagranie.ini  Nagranie.rtf  Starter.ini  _START.bat  _START.lnk  instrukcja0.rtf  instrukcja1.txt  instrukcja2.txt  mregconfig1.ini  mregconfig2.ini  (+1 more)
MouseReg2/EXAMPLE1999/: INSTR1.TXT
MouseReg2/docs/: Analyzer Instructions.doc  Instructions.doc  Mail-Readme v3.2a PL.txt  Manual 2003 EN.doc  Mouse Program-license-0204b.doc
MouseReg2/sample_data/: 100a.out  100a_c.out  101a.out  102A.out  103A.out  104A.out  105A.out  106a.out  107a.out  108a.out  109a.out  10p.out  multiple raw files.lnk  one file analisis.lnk
MouseReg2/sample_experiment/: Shortcut to analyser2004.lnk  Shortcut to mousereg2004.lnk  instruction.txt  output.out  regconfig.ini
MouseReg2/src/: Dib.c  Dib.h  Init.cxx  Init.old.c  REJESTR.DSW  REJESTR.MBT  REJESTR.MRT  Registra.cxx  Rejestr.cxx  Winmain.c  analyser.aps  cursor1.cur  rejestr.001  rejestr.aps  rejestr.mak  rejestr.mdp  resrc1.h  runreg.001  runreg.rc
MouseReg3/: clean.sh  instalacja_pl.md  install.sh  installing_en.md  screen.ini  start.sh
MouseReg3/MouseRegJs/: MouseRegJs.js  index.html
MouseReg3/private/: RESULTS.txt
MouseReg3/public/: index.html
MouseReg3/src/: CMakeLists.txt  regmouse3_main.cpp
(+168 files in other folders)
